--- a/web1/src/app/report/sale-report/sale-report.component.html
+++ b/web1/src/app/report/sale-report/sale-report.component.html
@@ -793,7 +793,7 @@
                                                                     style="color: #1a1e90;font-size: 22px;cursor: pointer;">
                                                                 </i>
                                                             </button>
-                                                            <div class="button-container">
+                                                            <div class="button-container d-none">
                                                                 <button class="bg_none">
                                                                     <i class="fa-solid fa-filter"
                                                                         style="font-size: 20px; color: #f44336;"></i>
