--- a/web1/src/app/shared/dashcard/dashcard.component.html
+++ b/web1/src/app/shared/dashcard/dashcard.component.html
@@ -14,7 +14,7 @@
     </div>
 </a> -->
 
-<a href="javascript:void(0)" routerLink={{routersLinks}} class="hoc">
+<a href="javascript:void(0)" routerLink={{routersLinks}} class="hoc d-md-block d-none">
     <div class="card " type="submit" (click)="function()">
         <div class="row" style="padding: 10px;">
             <div class="col-9 pt-3 p-0">
@@ -26,6 +26,26 @@
                 <img src={{icon}} class="float-left" alt="" width="60" height="60" style="padding: 10px;
                 background: #1e2672; border-radius: 42px; border-radius: 42px; border: 4px solid #ff5100;">
             </div>
+        </div>
+    </div>
+</a>
+
+<a href="javascript:void(0)" routerLink={{routersLinks}} class="hoc d-md-none d-block ">
+    <div class="cardM " type="submit" (click)="function()">
+        <div class="row" style="padding: 0px;">
+            <div class="col-12 pt-3 text-center">
+                <div class="col-12" >
+                    <img src={{icon}} class="float-left" alt="" width="60" height="60" style="padding: 10px;
+                    background: #1e2672; border-radius: 42px; border-radius: 42px; border: 4px solid #ff5100;">
+                </div>
+                <div class="col-12 pt-3 ">
+                    <span class="ml-auto name" style="font-size:1.1rem;font-weight:600;margin-top:5%;">
+                        {{title}}  
+                    </span>
+            </div>
+         
+            </div>
+          
         </div>
     </div>
 </a>
