--- a/server/views/barcode.ejs
+++ b/server/views/barcode.ejs
@@ -146,7 +146,7 @@
                             <% if (data.CompanyID !== 63){%>
                                  <%=i.ProductBrandName%>
                             <%}%>
-                            <% if (data.CompanyID === 63){%>
+                            <% if (data.CompanyID === 63 || data.CompanyID === 153){%>
                                 <%=i.ProductUniqueBarcode%>
                             <%}%>
                         </div>
