--- a/web1/src/app/admin/company.component.html
+++ b/web1/src/app/admin/company.component.html
@@ -219,15 +219,30 @@
                                                 Email
                                             </mat-slide-toggle>
                                         </div>
-                                        <div class="col-xl-2 col-lg-2 col-md-3 col-4 p-md-0" >
+                                        <div class="col-xl-1 col-lg-1 col-md-3 col-4 p-md-0 " >
                                             <mat-slide-toggle type="button" name="WhatsappMsg" color="primary"
                                                 #WhatsappMsgcontrol [(ngModel)]="data.WhatsappMsg"
                                                 class="example-margin" [disabled]="user?.UserGroup !== 'SuperAdmin'">Whatsapp</mat-slide-toggle>
+                                                
+                                        </div>
+                                        <div class="col-xl-1 col-lg-1 col-md-3 col-4 " style="margin-top: -13px;">
+                                                <mat-form-field class="example-full-width mb-0">
+                                                    <mat-label>Code</mat-label>
+                                                    <mat-select name="Code"
+                                                        #Codecontrol [disabled]="user?.UserGroup !== 'SuperAdmin'">
+                                                        <mat-option value="91">91 india</mat-option>
+                                                        <mat-option value="971">971 dubai</mat-option>
+                                                    </mat-select>
+                                                    <mat-error>
+                                                        Select Valid Code
+                                                    </mat-error>
+                                                </mat-form-field>
                                         </div>
                                         <div class="col-xl-2 col-lg-2 col-md-3 col-4 ps-2 ps-md-0" style="padding:0; ">
                                             <mat-slide-toggle type="button" name="WholeSale" color="primary"
                                                 #WholeSalecontrol [(ngModel)]="data.WholeSale" class="example-margin" [disabled]="user?.UserGroup !== 'SuperAdmin'">
                                                 WholeSale</mat-slide-toggle>
+
                                         </div>
                                         <div class="col-xl-2 col-lg-2 col-md-2 col-4 p-md-0">
                                             <mat-slide-toggle type="button" name="RetailPrice" color="primary"
