--- a/web1/src/app/common/about/about.component.html
+++ b/web1/src/app/common/about/about.component.html
@@ -14,6 +14,18 @@
                         </div>
                         <div class="row mt-md-2 mt-5 p-md-2 p-3 ">
                            <div class="col-12" style="font-size: 20px; line-height: 30px;">
+                               <h2 style="color: #ffea00;"> New Updates Date 19-02-2024 </h2>
+                               <P>1. Customer Order Ready WhatsApp message integration.</P>
+                               <P>Follow steps</P>
+                                    <ul>
+                                        <li>Customer List</li>
+                                        <li>Sale Report => Product pending Report</li>
+                                    </ul>
+                             
+                            </div>
+                        </div>
+                        <div class="row mt-md-2 mt-5 p-md-2 p-3 ">
+                           <div class="col-12" style="font-size: 20px; line-height: 30px;">
                                <h2 style="color: #ffea00;"> New Updates Date 08-02-2024 </h2>
                                <P>1. WhatsApp SMS format done with your software, Please read and cross check.</P>
                                <P>Follow steps</P>
