--- a/web1/src/app/po/supplier-po/supplier-po.component.html
+++ b/web1/src/app/po/supplier-po/supplier-po.component.html
@@ -92,7 +92,7 @@
                                         (click)="AssignSupplierPDF()" type="button" mat-raised-button color="warn">
                                         PDF
                                     </button>
-                                    <button *ngIf="this.orderComplete  == true" [disabled]="this.supllierPDF === ''"
+                                    <button *ngIf="this.orderComplete  == true && this.company.WhatsappMsg == 'true'" [disabled]="this.supllierPDF === ''"
                                         (click)="sendWhatsapp('')" class="ms-2" type="button" mat-raised-button
                                         color="primary">
                                         Whatsapp
