--- a/web1/src/app/sale/customer-list/customer-list.component.css
+++ b/web1/src/app/sale/customer-list/customer-list.component.css
@@ -17,3 +17,14 @@
     cursor: pointer;
     box-shadow: 2px 2px 6px #9c9795fa;
   }
+
+  .whatsappBill {
+    font-size: 27px;
+    background: #55c13e;
+    border-radius: 25px;
+    padding: 1px;
+    color: #ffffff;
+    height: 31px;
+    width: 31px;
+    box-shadow: 2px 2px 10px #0000002b;
+}
